esp_hosted_fg/host/linux/port/include/platform_wrapper.h

/* Driver Handle */
struct serial_drv_handle_t;
/*
 * control_path_platform_init function initializes the control
 * path data structures
 * Input parameter
 *      serial_drv_handle           :   Driver Handle
 * Returns
 *      SUCCESS(0) or FAILURE(-1) of above operation
 */
int control_path_platform_init(struct serial_drv_handle_t* serial_drv_handle);
/*
 * hosted_malloc function allocates size bytes.
 * Input parameter
 *      size    :   Number of Bytes
 * Returns
 *      pointer to allocated memory
 */
void* hosted_malloc(size_t size);
/*
 * hosted_free function frees the memory space pointed to by ptr.
 * Input parameter
 *      ptr     :   Address of pointer to allocated memory
 */

void hosted_free(void* ptr);